[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "common-tools"
version = "0.1.0"
description = "Internal utility library"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    "asyncpg>=0.31.0",
    "loguru>=0.7.3",
    "sqlalchemy>=2.0.48",
]

[tool.hatch.build.targets.wheel]
packages = ["src/common_tools"]
